Fix for expandables on FAQ and Commands on Safari Webkit

--- a/src/app/assets/styles/components/expandable.scss
+++ b/src/app/assets/styles/components/expandable.scss
@@ -74,7 +74,7 @@
         opacity: 1;
         margin-top: 20px;
         padding-top: 20px;
-        max-height: max-content;
+        max-height: 100%;
     }
 }
 
@@ -96,6 +96,6 @@
 @media only screen and (max-width: 790px) {
     .expandable {
         padding: 15px 20px;
-        height: max-content;
+        height: 100%;
     }
 }
